Adjusted the page to stop the form from reloading the page, and shrunk the page for better look on mobile

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ form {
 }
 
 table {
-    width: 580px;
+    width: 380px;
     border-collapse: collapse;
     border-spacing: 0;
     border: 2px solid black;
@@ -36,7 +36,7 @@ span {
 
 /* Main content */
 .main-grid {
-    width: 600px;
+    width: 400px;
     height: auto;
     margin: auto;
 }
